--- a/RayTracer2/RayTracer2.vcxproj
+++ b/RayTracer2/RayTracer2.vcxproj
@@ -89,6 +89,7 @@
     <ClInclude Include="Plane.h" />
     <ClInclude Include="Ray.h" />
     <ClInclude Include="SettingsFile.h" />
+    <ClInclude Include="Source.h" />
     <ClInclude Include="Sphere.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -104,6 +105,7 @@
     <ClCompile Include="Ray.cpp" />
     <ClCompile Include="RayTracer2.cpp" />
     <ClCompile Include="SettingsFile.cpp" />
+    <ClCompile Include="Source.cpp" />
     <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="vect.cpp" />
